--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Bright Smile Dental Clinic - Professional dental care for the whole family">
     <meta name="keywords" content="dentist, dental clinic, teeth cleaning, dental implants, orthodontics">
     <title>Bright Smile Dental Clinic</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Google Fonts -->
