add changes to css file and html files

--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,10 @@
                     <ul class="main-menu">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../about.html">About Us</a></li>
-                        <li class="has-dropdown active">
+                        <li class="has-dropdown ">
                             <a href="../">Services</a>
                             <ul class="dropdown">
-                                <li><a href="general.html" class="active">General Dentistry</a></li>
+                                <li><a href="general.html" >General Dentistry</a></li>
                                 <li><a href="cosmetic.html">Cosmetic Dentistry</a></li>
                                 <li><a href="orthodontics.html">Orthodontics</a></li>
                                 <li><a href="emergency.html">Emergency Services</a></li>
@@ -55,7 +55,7 @@
                         <li><a href="../../testimonials.html">Testimonials</a></li>
                         <li><a href="../../gallery.html">Gallery</a></li>
                         <li><a href="../../blog/">Blog</a></li>
-                        <li><a href="../../contact.html">Contact</a></li>
+                        <li class="active"><a href="../../contact.html">Contact</a></li>
                         <li><a href="../../booking.html" class="btn btn-primary">Book Appointment</a></li>
                     </ul>
                 </nav>
