--- a/services/general.html
+++ b/services/general.html
@@ -57,7 +57,7 @@
                         <li><a href="../../patient-resources.html">Patient Resources</a></li>
                         <li><a href="../../testimonials.html">Testimonials</a></li>
                         <li><a href="../../gallery.html">Gallery</a></li>
-                        <li><a href="../../blog/">Blog</a></li>
+                        <li><a href="../../blog.html">Blog</a></li>
                         <li><a href="../../contact.html">Contact</a></li>
                         <li><a href="../../booking.html" class="btn btn-primary">Book Appointment</a></li>
                     </ul>
