--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -6,6 +6,7 @@
     <title>Cosmetic Dentistry - Bright Smile Dental Clinic</title>
     <link rel="stylesheet" href="/css/cosmetic.css">
     <!-- Google Fonts -->
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
