--- a/services/general.html
+++ b/services/general.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Dentistry Services - Bright Smile Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="css/service.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
