--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Smile Bright Dental Clinic - Blog</title>
+    <title>Evergreen Dental Clinic - Blog</title>
 </head>
 <body>
     <!-- Header -->
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="contact-info">
                     <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                    <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen .com</span>
                 </div>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -27,7 +27,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                        <img src="/images/general/logo.png" alt="Evergreen  Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -187,7 +187,7 @@
                 <!-- Column 1 -->
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p style="color: #b0bec5; margin-bottom: 20px;">Smile Bright Dental Clinic is committed to providing exceptional dental care with the latest technology and a gentle touch, ensuring your comfort and satisfaction.</p>
+                    <p style="color: #b0bec5; margin-bottom: 20px;">Evergreen  Dental Clinic is committed to providing exceptional dental care with the latest technology and a gentle touch, ensuring your comfort and satisfaction.</p>
                     <div class="social-icons">
                         <a href="#"><span>f</span></a>
                         <a href="#"><span>t</span></a>
@@ -228,7 +228,7 @@
                     <div class="contact-info">
                         <p><span>📍</span> 123 Dental Street, City, State 12345</p>
                         <p><span>📞</span> (123) 456-7890</p>
-                        <p><span>📧</span> info@smilebrightdental.com</p>
+                        <p><span>📧</span> info@evergreendental.com</p>
                         <p><span>🕙</span> Mon-Fri: 8:00 AM - 6:00 PM<br>
                           Saturday: 9:00 AM - 3:00 PM<br>
                           Sunday: Closed</p>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>©️ 2025 Smile Bright Dental Clinic. All Rights Reserved.</p>
+                <p>©️ 2025 Evergreen  Dental Clinic. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
