--- a/booking.html
+++ b/booking.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
             </div>
             <div class="social-links">
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                    <img src="images/general/logo.png" alt="Evergreen  Dental Clinic Logo">
                 </a>
             </div>
             <nav>
