--- a/services/general.html
+++ b/services/general.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>General Dentistry Services - Bright Smile Dental Clinic</title>
+    <title>General Dentistry Services - Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="css/service.css">
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="contact-info">
                     <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                    <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                     <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
                 </div>
                 <div class="social-links">
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="../../index.html">
-                        <img src="../../images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                        <img src="../../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -87,7 +87,7 @@
             <div class="service-intro-content">
                 <div class="service-intro-text">
                     <h2>Comprehensive General Dental Care</h2>
-                    <p>At Bright Smile Dental Clinic, our general dentistry services focus on prevention, diagnosis, and treatment of a wide range of dental conditions. Our goal is to help you maintain optimal oral health through regular checkups and personalized care plans.</p>
+                    <p>At Evergreen Dental Clinic, our general dentistry services focus on prevention, diagnosis, and treatment of a wide range of dental conditions. Our goal is to help you maintain optimal oral health through regular checkups and personalized care plans.</p>
                     <p>Our team of experienced dentists uses the latest technologies and techniques to provide comfortable and effective treatments for patients of all ages.</p>
                     <div class="service-highlights">
                         <div class="highlight-item">
@@ -310,7 +310,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Bright Smile Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
+                    <p>Evergreen  Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
                     <div class="footer-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -341,13 +341,13 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</li>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@brightsmile.com</li>
+                        <li><i class="fas fa-envelope"></i> info@evergreen.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8am-5pm, Sat: 9am-2pm</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="../../privacy-policy.html">Privacy Policy</a>
                     <a href="../../terms-of-service.html">Terms of Service</a>
