--- a/services/orthodontics.html
+++ b/services/orthodontics.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Header (same as other pages) deepseek -->
+  
     <header>
         <div class="top-bar">
             <div class="container">
                 <div class="contact-info">
                     <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                    <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                     <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
                 </div>
                 <div class="social-links">
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="../../index.html">
-                        <img src="../../images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                        <img src="../../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -221,7 +221,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Bright Smile Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
+                    <p>Evergreen Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
                     <div class="footer-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -252,13 +252,13 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</li>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@brightsmile.com</li>
+                        <li><i class="fas fa-envelope"></i> info@evergreen.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8am-5pm, Sat: 9am-2pm</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen  Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="../../privacy-policy.html">Privacy Policy</a>
                     <a href="../../terms-of-service.html">Terms of Service</a>
