--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery | Bright Smile Dental Clinic</title>
+    <title>Gallery | Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/testimonial.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
             </div>
             <div class="social-links">
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                    <img src="images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                 </a>
             </div>
             <nav>
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="testimonials-intro">
             <h3>Real Stories from Real Patients</h3>
-            <p>At BrightSmile Dental, we pride ourselves on delivering exceptional dental care with a personal touch. But don't just take our word for it. Here's what our patients have to say about their experiences with us.</p>
+            <p>At Evergreen  Dental, we pride ourselves on delivering exceptional dental care with a personal touch. But don't just take our word for it. Here's what our patients have to say about their experiences with us.</p>
         </div>
     </div>
 
@@ -113,7 +113,7 @@
             <div class="testimonial-card">
                 <div class="quote-mark">"</div>
                 <div class="testimonial-content">
-                    <p class="testimonial-text">My son was terrified of dentists until we found BrightSmile. The pediatric dental team here is amazing! They turned what used to be a dreaded experience into something he actually looks forward to. The office environment is so kid-friendly and welcoming.</p>
+                    <p class="testimonial-text">My son was terrified of dentists until we found Evergreen Dental. The pediatric dental team here is amazing! They turned what used to be a dreaded experience into something he actually looks forward to. The office environment is so kid-friendly and welcoming.</p>
                     <div class="testimonial-author">
                         <div class="author-image">RD</div>
                         <div class="author-info">
@@ -129,7 +129,7 @@
             <div class="testimonial-card">
                 <div class="quote-mark">"</div>
                 <div class="testimonial-content">
-                    <p class="testimonial-text">I've been coming to BrightSmile for over five years now and wouldn't go anywhere else. The quality of care is consistently excellent, appointments are always on time, and the staff remembers personal details about me and my family. It feels more like visiting friends than going to the dentist!</p>
+                    <p class="testimonial-text">I've been coming to Evergreen Dental for over five years now and wouldn't go anywhere else. The quality of care is consistently excellent, appointments are always on time, and the staff remembers personal details about me and my family. It feels more like visiting friends than going to the dentist!</p>
                     <div class="testimonial-author">
                         <div class="author-image">JP</div>
                         <div class="author-info">
@@ -161,7 +161,7 @@
             <div class="testimonial-card">
                 <div class="quote-mark">"</div>
                 <div class="testimonial-content">
-                    <p class="testimonial-text">I needed emergency dental care while visiting from out of town. BrightSmile fit me in the same day and took care of my painful tooth infection. The staff was so kind and professional. They even followed up with me after I returned home to make sure everything was healing well.</p>
+                    <p class="testimonial-text">I needed emergency dental care while visiting from out of town. Evergreen Dental fit me in the same day and took care of my painful tooth infection. The staff was so kind and professional. They even followed up with me after I returned home to make sure everything was healing well.</p>
                     <div class="testimonial-author">
                         <div class="author-image">AT</div>
                         <div class="author-info">
@@ -195,7 +195,7 @@
     <div class="container">
         <div class="call-to-action">
             <h3>Ready to Experience Our Care?</h3>
-            <p>Join our community of satisfied patients and discover why so many people trust BrightSmile Dental with their oral health. Schedule your appointment today and see the difference for yourself.</p>
+            <p>Join our community of satisfied patients and discover why so many people trust Evergreen  Dental with their oral health. Schedule your appointment today and see the difference for yourself.</p>
             <a href="appointment.html" class="btn">Book Your Appointment</a>
         </div>
     </div>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="video-info">
                         <h4>The Johnson Family</h4>
-                        <p>How BrightSmile has been caring for three generations of the Johnson family.</p>
+                        <p>How Evergreen Dental has been caring for three generations of the Johnson family.</p>
                     </div>
                 </div>
             </div>
@@ -250,7 +250,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Bright Smile Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
+                    <p>Evergreen  Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
                     <div class="footer-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -281,13 +281,13 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</li>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@brightsmile.com</li>
+                        <li><i class="fas fa-envelope"></i> info@evergreen.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8am-5pm, Sat: 9am-2pm</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
