--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery | Bright Smile Dental Clinic</title>
+    <title>Gallery | Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
             </div>
             <div class="social-links">
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                    <img src="images/general/logo.png" alt="Evergreen  Dental Clinic Logo">
                 </a>
             </div>
             <nav>
@@ -70,7 +70,7 @@
     <!-- Page Header -->
     <header class="page-header">
         <div class="container">
-            <h1>Bright Smile Dental Clinic</h1>
+            <h1>Evergreen Dental Clinic</h1>
             <h2>About Our Practice</h2>
         </div>
     </header>
@@ -80,7 +80,7 @@
         <div class="container">
             <section class="section">
                 <h2 class="section-title">Our Story</h2>
-                <p>Welcome to Bright Smile Dental Clinic, where expert care meets compassion in creating healthy, beautiful smiles. Our practice was founded in 2005 by Dr. Sarah Johnson with a vision to transform dental experiences from anxiety-inducing to comfortable and positive.</p>
+                <p>Welcome to Evergreen  Dental Clinic, where expert care meets compassion in creating healthy, beautiful smiles. Our practice was founded in 2005 by Dr. Sarah Johnson with a vision to transform dental experiences from anxiety-inducing to comfortable and positive.</p>
                 
                 <div class="mission-box">
                     <p>Our mission is to provide exceptional dental care in a warm, welcoming environment where patients feel valued, respected, and confident in their treatment choices.</p>
@@ -93,7 +93,7 @@
                     <div class="timeline-item left">
                         <div class="timeline-content">
                             <p class="timeline-year">2005</p>
-                            <p>Dr. Sarah Johnson establishes Bright Smile Dental Clinic with a focus on preventive care and patient comfort.</p>
+                            <p>Dr. Sarah Johnson establishes Evergreen Dental Clinic with a focus on preventive care and patient comfort.</p>
                         </div>
                     </div>
                     <div class="timeline-item right">
@@ -111,7 +111,7 @@
                     <div class="timeline-item right">
                         <div class="timeline-content">
                             <p class="timeline-year">2017</p>
-                            <p>Bright Smile launches its community outreach program, providing free dental care to underserved populations.</p>
+                            <p>Evergreen launches its community outreach program, providing free dental care to underserved populations.</p>
                         </div>
                     </div>
                     <div class="timeline-item left">
@@ -270,7 +270,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Bright Smile Dental</h3>
+                    <h3>Evergreen Dental</h3>
                     <p>Providing quality dental care for the whole family with a focus on comfort and advanced technology.</p>
                     <div class="footer-social">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -312,7 +312,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-bottom-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
