--- a/patient-resources.html
+++ b/patient-resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery | Bright Smile Dental Clinic</title>
+    <title>Gallery | Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="contact-info">
                     <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                    <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                     <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
                 </div>
                 <div class="social-links">
@@ -80,12 +80,12 @@
         <div class="container">
             <div class="resource-section">
                 <h2>Welcome to Our Patient Resources</h2>
-                <p>At Bright Smile Dental Clinic, we believe that informed patients make better decisions about their dental health. We've created this section to provide you with valuable information, forms, and resources to help you make the most of your dental care experience.</p>
+                <p>At Evergreen Dental Clinic, we believe that informed patients make better decisions about their dental health. We've created this section to provide you with valuable information, forms, and resources to help you make the most of your dental care experience.</p>
                 
                 <div class="patient-info-section">
                     <div class="info-box">
                         <h3>New Patient Information</h3>
-                        <p>If you're a new patient at Bright Smile Dental Clinic, we're excited to welcome you to our dental family! To make your first visit as smooth as possible, please take a moment to review the information below and download the necessary forms.</p>
+                        <p>If you're a new patient at Evergreen  Dental Clinic, we're excited to welcome you to our dental family! To make your first visit as smooth as possible, please take a moment to review the information below and download the necessary forms.</p>
                         <p>Please arrive 15 minutes before your scheduled appointment to complete any remaining paperwork. If you have any questions, don't hesitate to contact our friendly staff.</p>
                     </div>
                     <div class="info-box">
@@ -299,7 +299,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Bright Smile Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
+                    <p>Evergreen Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
                     <div class="footer-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -330,13 +330,13 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</li>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@brightsmile.com</li>
+                        <li><i class="fas fa-envelope"></i> info@evergreen.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8am-5pm, Sat: 9am-2pm</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen  Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms-of-service.html">Terms of Service</a>
