--- a/registration.html
+++ b/registration.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bright Smile Dental Clinic - New Patient Registration Form">
+    <meta name="description" content="Evergreen Dental Clinic - New Patient Registration Form">
     <meta name="keywords" content="dentist, dental clinic, patient registration, new patient">
-    <title>Patient Registration | Bright Smile Dental Clinic</title>
+    <title>Patient Registration | Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/responsive.css">
     <!-- Font Awesome for icons -->
