--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmetic Dentistry - Bright Smile Dental Clinic</title>
+    <title>Cosmetic Dentistry - Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/cosmetic.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="/css/style.css">
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="contact-info">
                     <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                    <span><i class="fas fa-envelope"></i> info@brightsmile.com</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                     <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
                 </div>
                 <div class="social-links">
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="../../index.html">
-                        <img src="../../images/general/logo.png" alt="Bright Smile Dental Clinic Logo">
+                        <img src="../../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="about-text">
                     <h2>Artistry Meets Dental Excellence</h2>
-                    <p>Cosmetic dentistry is the perfect blend of art and science. At Bright Smile Dental Clinic, we believe that a beautiful smile can transform not just your appearance, but your confidence and quality of life.</p>
+                    <p>Cosmetic dentistry is the perfect blend of art and science. At Evergreen Dental Clinic, we believe that a beautiful smile can transform not just your appearance, but your confidence and quality of life.</p>
                     <p>Our approach begins with understanding your goals and concerns. We then use advanced digital imaging to show you what's possible before any treatment begins. This collaborative process ensures that the final result exceeds your expectations.</p>
                     <p>Whether you're looking to correct minor imperfections or want a complete smile makeover, our team has the expertise and artistic vision to help you achieve the smile you've always wanted.</p>
                     <a href="../../booking.html" class="btn btn-secondary">Start Your Smile Journey</a>
@@ -356,7 +356,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="testimonial-text">
-                            <p>"I've always been self-conscious about my smile, but after getting veneers at Bright Smile, I can't stop smiling! The team made me feel comfortable throughout the entire process, and the results exceeded my expectations."</p>
+                            <p>"I've always been self-conscious about my smile, but after getting veneers at Evergreen , I can't stop smiling! The team made me feel comfortable throughout the entire process, and the results exceeded my expectations."</p>
                         </div>
                         <div class="testimonial-author">
                             <h4>Sarah Johnson</h4>
@@ -467,7 +467,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Bright Smile Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
+                    <p>Evergreen  Dental Clinic is dedicated to providing exceptional dental care in a comfortable environment using the latest technology and techniques.</p>
                     <div class="footer-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -498,13 +498,13 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</li>
                         <li><i class="fas fa-phone"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@brightsmile.com</li>
+                        <li><i class="fas fa-envelope"></i> info@evergreen.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8am-5pm, Sat: 9am-2pm</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Bright Smile Dental Clinic. All Rights Reserved.</p>
+                <p>&copy; 2025 Evergreen  Dental Clinic. All Rights Reserved.</p>
                 <div class="footer-links">
                     <a href="../../privacy-policy.html">Privacy Policy</a>
                     <a href="../../terms-of-service.html">Terms of Service</a>
