--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p>Comprehensive dental care in a comfortable, modern environment</p>
                     <div class="hero-buttons">
                         <a href="booking.html" class="btn btn-primary">Book Appointment</a>
-                        <a href="services/" class="btn btn-outline">Our Services</a>
+                        <a href="services.html" class="btn btn-outline">Our Services</a>
                     </div>
                 </div>
             </div>
