add images, html files and css files

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/general/logo.png" alt="Evergreen  Dental Clinic Logo">
+                    <img src="images/logo.png" alt="Evergreen  Dental Clinic Logo">
                 </a>
             </div>
             <nav>
@@ -197,14 +197,9 @@
                         <p><strong>Orthodontist</strong></p>
                         <p>DDS, University of California<br>Certified Invisalign provider</p>
                     </div>
-                    <div class="team-member">
-                        <div class="team-photo">LM</div>
-                        <h3>Lisa Martinez</h3>
-                        <p><strong>Dental Hygienist</strong></p>
-                        <p>RDH, Cleveland Dental Institute<br>Preventive care specialist</p>
-                    </div>
+                  
                 </div>
-                <a href="team.html" class="button">Meet Our Full Team</a>
+               
             </section>
 
             <section class="section">
