--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="../../index.html">
-                        <img src="../../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="../../images/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="about-cosmetic-content">
                 <div class="about-image">
-                    <img src="../../images/services/cosmetic-smile.jpg" alt="Beautiful smile after cosmetic dentistry">
+                    <img src="/images/artistry.jpg" alt="Beautiful smile after cosmetic dentistry">
                 </div>
                 <div class="about-text">
                     <h2>Artistry Meets Dental Excellence</h2>
@@ -151,7 +151,7 @@
                     <div class="tab-pane active" id="veneers">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="../../images/services/veneers.jpg" alt="Porcelain Veneers">
+                                <img src="/images/veneers.jpg" alt="Porcelain Veneers">
                             </div>
                             <div class="tab-details">
                                 <h3>Porcelain Veneers</h3>
@@ -173,7 +173,7 @@
                     <div class="tab-pane" id="whitening">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="../../images/services/whitening.jpg" alt="Teeth Whitening">
+                                <img src="/images/teethwhitening.jpg" alt="Teeth Whitening">
                             </div>
                             <div class="tab-details">
                                 <h3>Professional Teeth Whitening</h3>
@@ -217,7 +217,7 @@
                     <div class="tab-pane" id="crowns">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="../../images/services/crowns.jpg" alt="Aesthetic Crowns">
+                                <img src="/images/crowns.jpg" alt="Aesthetic Crowns">
                             </div>
                             <div class="tab-details">
                                 <h3>Aesthetic Crowns</h3>
@@ -239,7 +239,7 @@
                     <div class="tab-pane" id="smile-makeover">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="../../images/services/smile-makeover.jpg" alt="Smile Makeover">
+                                <img src="/images/smilemakeover.jpg" alt="Smile Makeover">
                             </div>
                             <div class="tab-details">
                                 <h3>Complete Smile Makeover</h3>
@@ -276,11 +276,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="../../images/gallery/before-1.jpg" alt="Before Treatment">
+                                <img src="/images/before1.jpg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="../../images/gallery/after-1.jpg" alt="After Treatment">
+                                <img src="/images/after1.jpeg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
@@ -294,11 +294,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="../../images/gallery/before-2.jpg" alt="Before Treatment">
+                                <img src="/images/before2.jpeg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="../../images/gallery/after-2.jpg" alt="After Treatment">
+                                <img src="/images/after2.jpeg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
@@ -312,11 +312,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="../../images/gallery/before-3.jpg" alt="Before Treatment">
+                                <img src="/images/before3.jpg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="../../images/gallery/after-3.jpg" alt="After Treatment">
+                                <img src="/images//after3.jpg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
