--- a/services/general.html
+++ b/services/general.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="../../index.html">
-                        <img src="../../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="/images/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -110,7 +110,7 @@
                     <a href="../../booking.html" class="btn btn-primary">Schedule Your Checkup</a>
                 </div>
                 <div class="service-intro-image">
-                    <img src="../../images/services/general-dentistry-main.jpg" alt="General Dentistry at Bright Smile">
+                    <img src="/images/general.jpg" alt="General Dentistry at Evergreen">
                 </div>
             </div>
         </div>
