--- a/testimonials.html
+++ b/testimonials.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/general/logo.png" alt="Evergreen Dental Clinic Logo">
+                    <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
                 </a>
             </div>
             <nav>
