add images, html files and css files

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/images/general/logo.png" alt="Evergreen  Dental Clinic Logo">
+                        <img src="/images/logo.png" alt="Evergreen  Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -75,7 +75,7 @@
                 <!-- Blog Card 1 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="The Importance of Regular Dental Check-ups">
+                        <img src="/images/blog/checkup.jpg" alt="The Importance of Regular Dental Check-ups">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Preventive Care</span>
@@ -91,7 +91,7 @@
                 <!-- Blog Card 2 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="Modern Teeth Whitening Techniques">
+                        <img src="/images/blog/white.jpg" alt="Modern Teeth Whitening Techniques">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Cosmetic Dentistry</span>
@@ -107,7 +107,7 @@
                 <!-- Blog Card 3 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="Childhood Dental Care Tips">
+                        <img src="/images/blog/kids.jpg" alt="Childhood Dental Care Tips">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Pediatric Dentistry</span>
@@ -123,7 +123,7 @@
                 <!-- Blog Card 4 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="Understanding Dental Implants">
+                        <img src="/images/blog/implants.jpg" alt="Understanding Dental Implants">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Restorative Dentistry</span>
@@ -139,7 +139,7 @@
                 <!-- Blog Card 5 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="Foods for Healthy Teeth">
+                        <img src="images/blog/food.jpg" alt="Foods for Healthy Teeth">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Nutrition</span>
@@ -155,7 +155,7 @@
                 <!-- Blog Card 6 -->
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="/api/placeholder/600/400" alt="Managing Dental Anxiety">
+                        <img src="images/blog/anxiety.jpg" alt="Managing Dental Anxiety">
                     </div>
                     <div class="blog-details">
                         <span class="blog-category">Patient Care</span>
