--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="about-cosmetic-content">
                 <div class="about-image">
-                    <img src="/images/artistry.jpg" alt="Beautiful smile after cosmetic dentistry">
+                    <img src="/images/cosmetic/artistry.jpg" alt="Beautiful smile after cosmetic dentistry">
                 </div>
                 <div class="about-text">
                     <h2>Artistry Meets Dental Excellence</h2>
@@ -151,7 +151,7 @@
                     <div class="tab-pane active" id="veneers">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="/images/veneers.jpg" alt="Porcelain Veneers">
+                                <img src="/images/cosmetic/veneers.jpg" alt="Porcelain Veneers">
                             </div>
                             <div class="tab-details">
                                 <h3>Porcelain Veneers</h3>
@@ -173,7 +173,7 @@
                     <div class="tab-pane" id="whitening">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="/images/teethwhitening.jpg" alt="Teeth Whitening">
+                                <img src="/images/cosmetic/teethwhitening.jpg" alt="Teeth Whitening">
                             </div>
                             <div class="tab-details">
                                 <h3>Professional Teeth Whitening</h3>
@@ -217,7 +217,7 @@
                     <div class="tab-pane" id="crowns">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="/images/crowns.jpg" alt="Aesthetic Crowns">
+                                <img src="/images/cosmetic/crowns.jpg" alt="Aesthetic Crowns">
                             </div>
                             <div class="tab-details">
                                 <h3>Aesthetic Crowns</h3>
@@ -239,7 +239,7 @@
                     <div class="tab-pane" id="smile-makeover">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="/images/smilemakeover.jpg" alt="Smile Makeover">
+                                <img src="/images/cosmetic/smilemakeover.jpg" alt="Smile Makeover">
                             </div>
                             <div class="tab-details">
                                 <h3>Complete Smile Makeover</h3>
@@ -276,11 +276,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="/images/before1.jpg" alt="Before Treatment">
+                                <img src="/images/cosmetic/before1.jpg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="/images/after1.jpeg" alt="After Treatment">
+                                <img src="/images/cosmetic/after1.jpeg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
@@ -294,11 +294,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="/images/before2.jpeg" alt="Before Treatment">
+                                <img src="/images/cosmetic/before2.jpeg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="/images/after2.jpeg" alt="After Treatment">
+                                <img src="/images/cosmetic/after2.jpeg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
@@ -312,11 +312,11 @@
                         <div class="case-images">
                             <div class="before-image">
                                 <span class="label">Before</span>
-                                <img src="/images/before3.jpg" alt="Before Treatment">
+                                <img src="/images/cosmetic/before3.jpg" alt="Before Treatment">
                             </div>
                             <div class="after-image">
                                 <span class="label">After</span>
-                                <img src="/images//after3.jpg" alt="After Treatment">
+                                <img src="/images/cosmetic/after3.jpg" alt="After Treatment">
                             </div>
                         </div>
                         <div class="case-description">
@@ -345,7 +345,7 @@
                 <!-- Testimonial 1 -->
                 <div class="testimonial-card">
                     <div class="testimonial-image">
-                        <img src="../../images/testimonials/patient-1.jpg" alt="Sarah Johnson">
+                        <img src="../../images/sarahJ.jpg" alt="Sarah Johnson">
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-rating">
@@ -368,7 +368,7 @@
                 <!-- Testimonial 2 -->
                 <div class="testimonial-card">
                     <div class="testimonial-image">
-                        <img src="../../images/testimonials/patient-2.jpg" alt="Michael Chen">
+                        <img src="../../images/michaelC.jpg" alt="Michael Chen">
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-rating">
